--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
+*,*::before,*::after{
+  box-sizing: border-box;
+  font-weight: normal;
+}
+
+
 body {
   margin: 0;
+  padding: 0;
+  background: linear-gradient(to right , #56CCF2,#2F80ED);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +15,3 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
